@@ -1,3 +1,8 @@
+2007-02-06 Sandro Santilli <strk@refractions.net>
+
+	* tests/xmltester/: Makefile.am, badguy3.xml:
+	  Added simplified version of nasty buffer bug test.
+
 2007-02-08 Mark Cave-Ayland <mark.cave-ayland@ilande.co.uk>
 
 	* configure.in: Allow configure to continue with use_python
